--- a/2-myntra-react-clone/src/index.css
+++ b/2-myntra-react-clone/src/index.css
@@ -241,6 +241,13 @@ header {
   margin-left: 5px;
 }
 
+.bag-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  width: 100%;
+}
+
 .btn-add-bag {
   margin-top: 8px;
   font-size: 18px;
@@ -269,6 +276,14 @@ header {
 .arrow {
   margin-bottom: -3px;
   margin-left: 4px;
+}
+
+.wishlist {
+  margin-top: 12px;
+  margin-left: 10px;
+  height: 26px;
+  width: 26px;
+  cursor: pointer;
 }
 
 
@@ -314,6 +329,8 @@ a.action_container:link {
   z-index: 1;
   margin-bottom: 50px;
 }
+
+
 
 .bag-page {
   width: 75%;
@@ -388,6 +405,33 @@ a.action_container:link {
   border-radius: 4px;
   position: relative;
   padding: 12px 12px 0;
+}
+
+.wishlist-item-container {
+  margin-bottom: 8px;
+  background: #fff;
+  font-size: 14px;
+  border: 1px solid #eaeaec;
+  border-radius: 4px;
+  position: relative;
+  padding: 14px 15px 0;
+  width: 42%;
+}
+
+.wishlist-items-container {
+  width: 100%;
+  padding-right: 20px;
+  padding-top: 32px;
+  color: #282c3f;
+  font-size: 13px;
+  line-height: 1.42857143;
+  margin-top: 75px;
+  z-index: 1;
+  margin-bottom: 50px;
+  display: flex;
+  /* gap: 30px; */
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .item-left-part {
@@ -478,9 +522,4 @@ a.action_container:link {
   100% {
     transform: rotate(1turn)
   }
-}
-
-.bag-buttons {
-  display: flex;
-  justify-content: center;
 }
